# jurassic-bitcoin

./: .gitignore  Cargo.toml  README.md
codex-chat-sessions/: chat-handoff-2026-02-26_07-59-59.md
configs/: bitcoin.regtest.pruned.conf
corpus/: agree-basic.json  hello-divergence.json  rpc-template-p2wpkh.json  script-slice-happy.json
crates/jb-consensus-profile/: Cargo.toml
crates/jb-consensus-profile/src/: lib.rs
crates/jb-core-exec/: Cargo.toml
crates/jb-core-exec/src/: lib.rs
crates/jb-corpus/: Cargo.toml
crates/jb-corpus/src/: lib.rs
crates/jb-diff/: Cargo.toml
crates/jb-diff/src/: lib.rs
crates/jb-fixtures/: Cargo.toml
crates/jb-fixtures/src/: lib.rs
crates/jb-ingest/: Cargo.toml
crates/jb-ingest/src/: lib.rs
crates/jb-model/: Cargo.toml
crates/jb-model/src/: lib.rs
crates/jb-mutator/: Cargo.toml
crates/jb-mutator/src/: lib.rs
crates/jb-reducer/: Cargo.toml
crates/jb-reducer/src/: lib.rs
crates/jb-rust-shadow/: Cargo.toml
crates/jb-rust-shadow/src/: lib.rs
crates/jurassic-bitcoin-cli/: Cargo.toml
crates/jurassic-bitcoin-cli/src/: main.rs
docs/: bitcoind-windows-regtest.md  era-2009-2013.md  museum.md
docs/grants/: demo_script.md  email_pitch.md  one_pager.md
fixtures/blobs/: legacy-no-witness.json  segwit-checksig-hook.json
fixtures/manifests/: era_2009_2013_poc.json  rpc_fetch_smoke.json
scripts/: run-bitcoind-pruned.ps1  watch-stop-extract-2013.ps1
tools/quirk-museum-vite/: README.md  index.html  package-lock.json  package.json  vite.config.js
tools/quirk-museum-vite/scripts/: sync-data.mjs
tools/quirk-museum-vite/src/: main.js  style.css
