[workspace]
members = [
  "crates/jb-model",
  "crates/jb-ingest",
  "crates/jb-core-exec",
  "crates/jb-rust-shadow",
  "crates/jb-diff",
  "crates/jb-corpus",
  "crates/jb-mutator",
  "crates/jb-reducer",
  "crates/jurassic-bitcoin-cli", "crates/jb-consensus-profile",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Jurassic Bitcoin Contributors"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
