[package]
name = "jb-core-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22"
hex.workspace = true
jb-model = { path = "../jb-model" }
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", default-features = true, features = ["json"] }
