[package]
name = "jb-fixtures"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", default-features = true, features = ["json"] }
