[package]
name = "jurassic-bitcoin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
jb-core-exec = { path = "../jb-core-exec" }
jb-corpus = { path = "../jb-corpus" }
jb-diff = { path = "../jb-diff" }
jb-model = { path = "../jb-model" }
jb-mutator = { path = "../jb-mutator" }
jb-reducer = { path = "../jb-reducer" }
jb-rust-shadow = { path = "../jb-rust-shadow" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
